# giver-index

./: .gitignore  DISCUSSION_UPDATE_BODY.md  METHODOLOGY.md  README.md  pyproject.toml
data/outputs/: simulation_config.yaml  simulation_narrative.md  slopometry_narrative_2025.txt
data/top200/: consolidated_top_200.csv
docs/: pilot-report-2025.md  pilot-report-body.md  update_discussion.json  visualizations.md
docs/visualizations/: generate.py
scripts/: topo-to-geojson.py
src/giver_index/: __init__.py  cli.py  feeds.py  giver.py  mirofish.py  scoring.py  slopometry.py
tests/: test_giver.py  test_scoring.py  test_slopometry.py
